# PeopleCounter

./: .clang-format  CMakeLists.txt
src/: .clang-format  main.cpp
src/camera/: CameraStream.cpp  CameraStream.hpp
src/peopleDetector/: Counter.cpp  Counter.hpp  Detection.hpp  PeopleDetector.cpp  PeopleDetector.cu  PeopleDetector.hpp  TrackedObject.cpp  TrackedObject.hpp  Tracker.cpp  Tracker.hpp
